crates/agui_macros/tests/compile-fail/build_field_no_value.rs
use agui_core::widget::WidgetRef;
use agui_macros::build;
use agui_primitives::Row;

fn main() {
    let _widget: WidgetRef = build! {
        Row {
            color:
        }
    };
}
